This is the upload of css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./python.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="brain">
@@ -17,10 +17,6 @@
             <li><span><a href="./webdevelopment.html"><i class="fa fa-html5">WEB-DEVELOPMENT</i></a></span></li>
             <li><span><a href="./activity.html"><i class="fa fa-link">ACTIVIES</i></a></span></li>
         </ul>
-        <div class="search">
-        <label for="search"></label>
-        <input type="search" placeholder="Search" id="search" name="search">
-    </div>
     </div>
     <div class="slider">
         <div class="side">
